add password field

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,6 +2,7 @@
 <body>
 <form action="create-user" method="post">
     <input type="text" placeholder="Username" name="username" />
+    <input type="password" placeholder="Password" name="password" />
     <button type="submit">Submit</button>
 </form>
 <a href="posts">Posts</a>
