--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <form action="create-user" method="post">
-    <input type="text" placeholder="Username" name="username" />
+    <input type="text" placeholder="Username" name="username" size="25"/>
     <input type="password" placeholder="Password" name="password" />
     <button type="submit">Submit</button>
 </form>
